--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Films &amp; Videos</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="wrapped.html">WRAPPED in 30 Days</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="page4.html">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="newsletter.html">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
                     </li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.youtube.com/@standardstoryco" target="_blank">
@@ -98,7 +98,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Z84u7bYnruESW0FAV9KxqVopLWC7gBr4Y4uoUhfRLUXJiHMk6xxeChYB5Vgb4vUIXSkGU6BRvA7QUSMoKutfDB2ifkdAo/Ord1WOLWR0K21uVzATTFeSJxvai7aavobx">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="DGbQ9vSAYe12toG7CIzApF7gTiMvgQjmfxNgoD3nlI9QB17vQMB1nhOPRErdLGS7XH+b0JqEkYRzgMrAOq6K+atXn1BNFHSc05LvLoOcOi69Vb0C8jD/H2hVj4wX1iF3">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Message sent!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
