--- a/wrapped.html
+++ b/wrapped.html
@@ -64,7 +64,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Films &amp; Videos</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="wrapped.html">WRAPPED in 30 Days</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="page4.html">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="newsletter.html">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
                     </li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.youtube.com/@standardstoryco" target="_blank">
